--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
             "height": 600,
             "projection": {"type": "equirectangular"},
             "data": {
-            "url": "https://raw.githubusercontent.com/crichard14/Data/gh-pages/Asia.json",
-            "format": {"type": "topojson", "feature": "Asia"}
+                "url": "https://raw.githubusercontent.com/crichard14/Data/gh-pages/Asia.json",
+                "format": {"type": "topojson", "feature": "Asia"}
             },
             "transform": [
             {
-            "lookup": "properties.name",
-            "from": {
-            "data": {
-            "url": "https://raw.githubusercontent.com/crichard14/Data/gh-pages/AsiaPopulation2020.csv"
-            },
-            "key": "Country",
-            "fields": ["Density"]
-            }
+                "lookup": "properties.name",
+                "from": {
+                "data": {
+                    "url": "https://raw.githubusercontent.com/crichard14/Data/gh-pages/AsiaPopulation2020.csv"
+                },
+                "key": "Country",
+                "fields": ["Density"]
+                }
             },
             {"calculate": "datum.Active + 0.1", "as": "Active Cases"}
             ],
@@ -57,11 +57,11 @@
             "scale": {"type": "log"}
             },
             "tooltip": [
-            {"field": "properties.NAME", "type": "nominal", "title": "Country"},
-            {"field": "Active", "type": "quantitative"}
+                {"field": "properties.name", "type": "nominal", "title": "Country"},
+                {"field": "Density", "type": "quantitative", "format": ","}
             ]
             }
-            }
+        }
     ;
         
         // Embed the visualization in the container with id `vis`
