--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
         <div class="pure-g">
             <div class="pure-u-1-2">
                 <p class="footertext">A visualisation by Christopher Richard Hartono</p>
-                <p class="footertext">Email: <a href="gmail.com">char0066@student.monash.edu</a> </p>
+                <p class="footertext">Email: <a href="https://mail.google.com/mail/u/0/">char0066@student.monash.edu</a> </p>
                 <p class="footertext">Dataset provided from 
                     <a href="https://www.kaggle.com/sansuthi/asian-countries-by-population">Kaggle.com</a> 
                 </p>
