--- a/index.html
+++ b/index.html
@@ -434,9 +434,7 @@
                     lower the ferlitity rate of the country.
                     The factors contributing to the declining birthrate in Japan include the declining 
                     marriage rate, an increase in the average age of those getting married, economic 
-                    burden, childcare burden, later child-bearing, and infertility. There is a gender 
-                    difference in role division, with 70% of unmarried people live with their parents 
-                    and continue to work while leaving the household chores to their mothers. 
+                    burden, childcare burden, later child-bearing, and infertility.  
                     <a href="https://pubmed.ncbi.nlm.nih.gov/30270298/" id="bodylink">Read full article.</a> </p>
 
             </div>
