--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h1>Population of Asia in 2020</h1>
                 
                 <p id="popu">
-                    <b>Asia</b> is the largest and most populous of earth's continents and
+                    Asia is the largest and most populous of earth's continents and
                     its located in both the northern and eastern hemispheres.
                     Asia comprises a full 30% of the world's land area with more than 55% of
                     the world's current population. It also has the highest growth
@@ -231,7 +231,7 @@
         <div class="pure-u-1-1">
             
             <hr>
-            <h2>Top 5 Most populated Country</h2>
+            <h2>5 Most populated Countries in Asia</h2>
         </div>
 
         <div class="pure-g">
@@ -307,7 +307,7 @@
             </div>
 
             <div class="pure-u-1-2">
-                <p id="top5text"> <b>China</b> is the most populated country 
+                <p id="top5text"> China is the most populated country 
                     in Asia, in fact it is the most populated country in the face of the planet! 
                     followed by the U.S in the second place. 
                     China is populated by over 1.43 billion people, but however it is not the densest 
@@ -432,7 +432,7 @@
                 <p> We can see clearly that theres a negative linear relation between fertility rate 
                     and the median age. Meaning the older the majority of the population, the 
                     lower the ferlitity rate of the country.
-                    The factors contributing to the declining birthrate in <b>Japan</b> include the declining 
+                    The factors contributing to the declining birthrate in Japan include the declining 
                     marriage rate, an increase in the average age of those getting married, economic 
                     burden, childcare burden, later child-bearing, and infertility.  
                     <a href="https://pubmed.ncbi.nlm.nih.gov/30270298/" id="bodylink">Read full article.</a> </p>
