--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                 </div>
                 <p> We can see clearly that theres a negative linear relation between fertility rate 
                     and the median age. Meaning the older the majority of the population, the 
-                    lower the ferlitity rate of the country.
+                    lower the fertility rate of the country.
                     The factors contributing to the declining birthrate in Japan include the declining 
                     marriage rate, an increase in the average age of those getting married, economic 
                     burden, childcare burden, later child-bearing, and infertility.  
