--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                 <h1>Population of Asia in 2020</h1>
                 
                 <p id="popu">
-                    Asia is the largest and most populous of earth's continents and
+                    <b>Asia</b> is the largest and most populous of earth's continents and
                     its located in both the northern and eastern hemispheres.
-                    Asia comprises a full 30% of the world's land area with more than 55% of
+                    Asia comprises a full 30% of the world's land area with <b>more than 55%</b> of
                     the world's current population. It also has the highest growth
                     rate today, and its population almost quadrupled during the 20th
                     century.
@@ -112,7 +112,7 @@
         <div class="pure-g">
             <div class="pure-u-1-2">
                 <h2>Population and Land Area Comparison </h2>
-                <p> In general there seems to be a positive linear relationship between
+                <p> In general there seems to be a <b>positive linear</b> relationship between
                      the number of population and the land area of the country. 
                      And we can see that the density of a country depends on its number of population 
                     and land area. A country's density is higher if the number of population is higher 
@@ -307,10 +307,10 @@
             </div>
 
             <div class="pure-u-1-2">
-                <p id="top5text"> China is the most populated country 
+                <p id="top5text"> <b>China</b> is the most populated country 
                     in Asia, in fact it is the most populated country in the face of the planet! 
                     followed by the U.S in the second place. 
-                    China is populated by over 1.43 billion people, but however it is not the densest 
+                    China is populated by over <b>1.43 billion</b> people, but however it is not the densest 
                     country due to it's 9,388,211 sq Km of land area. It is mindblowing to see that 
                     4 of the top 5 most populated country are in Asia!
                     </p>
@@ -432,7 +432,7 @@
                 <p> We can see clearly that theres a negative linear relation between fertility rate 
                     and the median age. Meaning the older the majority of the population, the 
                     lower the fertility rate of the country.
-                    The factors contributing to the declining birthrate in Japan include the declining 
+                    The factors contributing to the declining birthrate in <b>Japan</b> include the declining 
                     marriage rate, an increase in the average age of those getting married, economic 
                     burden, childcare burden, later child-bearing, and infertility.  
                     <a href="https://pubmed.ncbi.nlm.nih.gov/30270298/" id="bodylink">Read full article.</a> </p>
