--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
               </div>
               <div class="pure-u-1-2">
-                <h3 id="header2">Data Visualization 2 ‎‎ㅤㅤChristopher Richard Hartono</h3>
+                <h3 id="header2">Data Visualization  ‎‎ㅤㅤChristopher Richard Hartono</h3>
             </div>
           </div>
              
